--- a/MODAMSWeb/Areas/Identity/Pages/Account/LoginWith2fa.cshtml
+++ b/MODAMSWeb/Areas/Identity/Pages/Account/LoginWith2fa.cshtml
@@ -1,7 +1,11 @@
 ﻿@page
+@using System.Globalization
+
+
 @model LoginWith2faModel
 @{
     Layout = "_Layout1";
+    var isSomali = CultureInfo.CurrentCulture.Name == "so";
 }
 
 <div class="col col-login mx-auto text-center">
@@ -15,7 +19,16 @@
             <span class="login100-form-title">
                 <img src="~/assets/images/brand/FGS.png" class="h-8" alt="">
             </span>
-            <p class="text-center">Your login is protected with an authenticator app.<br /> Enter your authenticator code below.</p>
+            <p class="text-center">
+                @if (isSomali)
+                {
+                    <span>Gelitaankaaga waxaa lagu ilaaliyaa app xaqiijinta.<br />Geli code-kaaga xaqiijinta ee hoose.</span>
+                }
+                else
+                {
+                    <span>Your login is protected with an authenticator app.<br /> Enter your authenticator code below.</span>
+                }
+            </p>
             <div class="row">
                 <div class="col-md-12">
                     <form method="post" asp-route-returnUrl="@Model.ReturnUrl">
@@ -29,19 +42,32 @@
                         <div class="checkbox mb-3">
                             <label asp-for="Input.RememberMachine" class="form-label">
                                 <input asp-for="Input.RememberMachine" />
-                                @Html.DisplayNameFor(m => m.Input.RememberMachine)
+                                @if(isSomali)
+                                {
+                                    <span>Haddii aad rabto in qalabkan lagu xasuusto</span>
+                                }
+                                else
+                                {
+                                    <span>Remember this machine</span>
+                                }
                             </label>
                         </div>
                         <div>
-                            <button type="submit" class="w-100 btn btn-lg btn-primary">Log in</button>
+                            <button type="submit" class="w-100 btn btn-lg btn-primary">@(isSomali ? "Soo gal" : "Log in")</button>
                         </div>
                     </form>
                 </div>
             </div>
             <br />
             <p class="text-center">
-                Don't have access to your authenticator device? <br />You can
-                <a id="recovery-code-login" asp-page="./LoginWithRecoveryCode" asp-route-returnUrl="@Model.ReturnUrl">log in with a recovery code</a>.
+                @if(isSomali)
+                {
+                    <span>Ma haysaa qalabkaaga xaqiijinta? <br />Waad isticmaali kartaa <a id="recovery-code-login" asp-page="./LoginWithRecoveryCode" asp-route-returnUrl="@Model.ReturnUrl">code-ka soo kabashada si aad u gasho</a>.</span>
+                }
+                else
+                {
+                    <span>Don't have access to your authenticator device? <br />You can <a id="recovery-code-login" asp-page="./LoginWithRecoveryCode" asp-route-returnUrl="@Model.ReturnUrl">log in with a recovery code</a>.</span>
+                }
             </p>
 
         </div>
