--- a/MODAMSWeb/Areas/Identity/Pages/Account/Manage/TwoFactorAuthentication.cshtml
+++ b/MODAMSWeb/Areas/Identity/Pages/Account/Manage/TwoFactorAuthentication.cshtml
@@ -1,21 +1,26 @@
 ﻿@page
+@using Microsoft.AspNetCore.Mvc.Localization
+@using System.Globalization
 @using Microsoft.AspNetCore.Http.Features
+@inject IViewLocalizer Localizer
+
 @model TwoFactorAuthenticationModel
 @{
     ViewData["Title"] = "Two-factor authentication (2FA)";
     ViewData["ActivePage"] = ManageNavPages.TwoFactorAuthentication;
+    bool isSomali = CultureInfo.CurrentCulture.Name == "so";
 }
 
 <!-- PAGE-HEADER -->
 <div class="page-header">
     <div>
-        <h1 class="page-title">Two-facor Autentication (2FA)</h1>
+        <h1 class="page-title">@Localizer["2FA"]</h1>
     </div>
     <div class="ms-auto pageheader-btn">
         <ol class="breadcrumb">
-            <li class="breadcrumb-item"><a asp-area="Users" asp-controller="Home" asp-action="Index">Dashboard</a></li>
-            <li class="breadcrumb-item"><a asp-area="Users" asp-controller="Home" asp-action="Settings">Account Settings</a></li>
-            <li class="breadcrumb-item active" aria-current="page">Two Factor Authentication</li>
+            <li class="breadcrumb-item"><a asp-area="Users" asp-controller="Home" asp-action="Index">@Localizer["Dashboard"]</a></li>
+            <li class="breadcrumb-item"><a asp-area="Users" asp-controller="Home" asp-action="Settings">@Localizer["AccountSettings"]</a></li>
+            <li class="breadcrumb-item active" aria-current="page">@Localizer["2FA"]</li>
         </ol>
     </div>
 </div>
@@ -25,10 +30,22 @@
     <div class="col-md-12">
         <div class="card">
             <div class="card-body text-center h-50">
-                <h3>Two Factor Authentication</h3>
+                <h3>@Localizer["2FA"]</h3>
                 <partial name="_StatusMessage" for="StatusMessage" />
                 <br /><br />
-                <p class="text-muted h5">Enhance your account's security with Two-Factor Authentication (2FA). It adds an extra layer of protection by requiring two forms of identification.<br /> <br />Keep your data safe from unauthorized access and password breaches. Enable 2FA today and secure your online presence.</p><br /><br /><br />
+                @{
+                    var message1 = "Enhance your account's security with Two-Factor Authentication (2FA). It adds an extra layer of protection by requiring two forms of identification.";
+                    var message2 = "To use 2FA, you will need to install an authenticator app and link it to your account. You will also receive recovery codes to help you log in if you lose access to your authentication device.";
+
+                    if (isSomali)
+                    {
+                        ViewData["Title"] = "Laba-tallaabo xaqiijin (2FA)";
+                        message1 = "Hagaaji amniga koontadaada adiga oo adeegsanaya laba-tallaabo xaqiijin (2FA). Waxay ku dareysaa lakab dheeri ah oo ilaalin ah adiga oo ku baahan laba nooc oo aqoonsi ah.";
+                        message2 = "Si aad u isticmaasho 2FA, waxaad u baahan doontaa inaad rakibto barnaamijka xaqiijinta (Authenticator app) oo aad ku darto koontadaada. Waxaad sidoo kale heli doontaa koodhadh soo celin ah oo kaa caawin doona inaad gasho haddii aad lumiso qalabkaaga xaqiijinta.";
+                    }
+                }
+                <p class="text-muted h5">@message1</p><br /><br />
+                <p class="text-muted h5">@message2</p><br /><br /><br />
                 @{
                     var consentFeature = HttpContext.Features.Get<ITrackingConsentFeature>();
                     @if (consentFeature?.CanTrack ?? true)
@@ -38,50 +55,72 @@
                             if (Model.RecoveryCodesLeft == 0)
                             {
                                 <div class="alert alert-danger">
-                                    <strong>You have no recovery codes left.</strong>
-                                    <p>You must <a asp-page="./GenerateRecoveryCodes">generate a new set of recovery codes</a> before you can log in with a recovery code.</p>
+                                    <strong>@(isSomali ? "Ma lihid wax codes soo kabasho ah oo hadhay." : "You have no recovery codes left.")</strong>
+                                    @{
+                                        var message = isSomali
+                                        ? "<p>Waxaad u baahan tahay inaad <a asp-page=\"./GenerateRecoveryCodes\">soo saarto set cusub oo codes soo kabasho ah</a> ka hor inta aadan ku soo galin code soo kabasho.</p>"
+                                        : "<p>You must <a asp-page=\"./GenerateRecoveryCodes\">generate a new set of recovery codes</a> before you can log in with a recovery code.</p>";
+                                    }
+                                    @Html.Raw(message)
                                 </div>
                             }
                             else if (Model.RecoveryCodesLeft == 1)
                             {
                                 <div class="alert alert-danger">
-                                    <strong>You have 1 recovery code left.</strong>
-                                    <p>You can <a asp-page="./GenerateRecoveryCodes">generate a new set of recovery codes</a>.</p>
+                                    <strong>@(isSomali ? "Waxaad hal code oo soo kabasho ah ka hartay." : "You have 1 recovery code left.")</strong>
+                                    @{
+                                        var message = isSomali
+                                        ? "<p>Waxaad soo saari kartaa <a asp-page='./GenerateRecoveryCodes'>set cusub oo codes soo kabasho ah</a>.</p>"
+                                        : "<p>You can <a asp-page='./GenerateRecoveryCodes'>generate a new set of recovery codes</a>.</p>";
+                                    }
+                                    @Html.Raw(message)
                                 </div>
                             }
                             else if (Model.RecoveryCodesLeft <= 3)
                             {
                                 <div class="alert alert-warning">
-                                    <strong>You have @Model.RecoveryCodesLeft recovery codes left.</strong>
-                                    <p>You should <a asp-page="./GenerateRecoveryCodes">generate a new set of recovery codes</a>.</p>
+                                    @if (isSomali)
+                                    {
+                                        <strong>Waxaad ka hartay @Model.RecoveryCodesLeft codes oo soo kabasho ah.</strong>
+                                        <p>Waxaad u baahan tahay inaad <a asp-page="./GenerateRecoveryCodes">soo saarto set cusub oo codes soo kabasho ah</a>.</p>
+                                    }
+                                    else
+                                    {
+                                        <strong>You have @Model.RecoveryCodesLeft recovery codes left.</strong>
+                                        <p>You should <a asp-page="./GenerateRecoveryCodes">generate a new set of recovery codes</a>.</p>
+                                    }
                                 </div>
                             }
 
                             if (Model.IsMachineRemembered)
                             {
                                 <form method="post" style="display: inline-block">
-                                    <button type="submit" class="btn btn-pill btn-outline-secondary">Forget this browser</button>
+                                    <button type="submit" class="btn btn-pill btn-outline-secondary">
+                                        @(isSomali ? "Illow biraawsarkan" : "Forget this browser")
+                                    </button>
                                 </form>
                             }
-                            <a asp-page="./Disable2fa" class="btn btn-pill btn-outline-secondary">Disable 2FA</a>
-                            <a asp-page="./GenerateRecoveryCodes" class="btn btn-pill btn-outline-primary">Generate Recovery Codes</a>
+                            <a asp-page="./Disable2fa" class="btn btn-pill btn-outline-secondary">@(isSomali ? "Dami 2FA" : "Disable 2FA")</a>
+                            <a asp-page="./GenerateRecoveryCodes" class="btn btn-pill btn-outline-primary">@(isSomali ? "Soo saar codes soo kabasho ah" : "Generate Recovery Codes")</a>
                         }
 
                         @if (!Model.HasAuthenticator)
                         {
-                            <a id="enable-authenticator" asp-page="./EnableAuthenticator" class="btn btn-pill btn-outline-secondary">Add authenticator app</a>
+                            <a id="enable-authenticator" asp-page="./EnableAuthenticator" class="btn btn-pill btn-outline-secondary">@(isSomali ? "Ku dar app-ka xaqiijinta" : "Add authenticator app")</a>
                         }
                         else
                         {
-                            <a id="enable-authenticator" asp-page="./EnableAuthenticator" class="btn btn-pill btn-outline-primary">Set up authenticator app</a>
-                            <a id="reset-authenticator" asp-page="./ResetAuthenticator" class="btn btn-pill btn-outline-secondary">Reset authenticator app</a>
+                            <a id="enable-authenticator" asp-page="./EnableAuthenticator" class="btn btn-pill btn-outline-primary">@(isSomali ? "Deji app-ka xaqiijinta" : "Set up authenticator app")</a>
+                            <a id="reset-authenticator" asp-page="./ResetAuthenticator" class="btn btn-pill btn-outline-secondary">@(isSomali ? "Dib u daji app-ka xaqiijinta" : "Reset authenticator app")</a>
                         }
                     }
                     else
                     {
                         <div class="alert alert-danger">
-                            <strong>Privacy and cookie policy have not been accepted.</strong>
-                            <p>You must accept the policy before you can enable two factor authentication.</p>
+                            <strong>
+                                @(isSomali ? "Shuruudaha asturnaanta iyo cookies lama aqbalin." : "Privacy and cookie policy have not been accepted.")
+                            </strong>
+                            <p>@(isSomali ? "Waa inaad aqbasho siyaasadda ka hor intaadan dhaqaajin xaqiijinta laba-geesoodka ah." : "You must accept the policy before you can enable two factor authentication.")</p>
                         </div>
                     }
                 }
